--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ NMCoF.asv
 .idea/modules.xml
 .idea/Monkey_Visual_Experiment_Data_Processing.iml
 .idea/vcs.xml
+~$Alfa_Exp_Record_sort.xlsx
+~$Alfa_Exp_Record_draft.xlsx
